--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TinDog</title>
 
   <!--Google Fonts-->
@@ -32,12 +33,11 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
-
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
+        <a class="navbar-brand" href="">TinDog</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
           aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,9 +47,9 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Download</a></li>
+            <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="#cta">Download</a></li>
           </ul>
         </div>
       </nav>
@@ -58,8 +58,9 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button class="btn btn-dark btn-lg btn-download" type="button"><i class="fab fa-apple"> Download</i></button>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button class="btn btn-dark btn-lg btn-download" type="button"><i class="fab fa-apple">
+              Download</i></button>
           <button class="btn btn-outline-light btn-lg btn-download" type="button"><i
               class="fab fa-google-play">Download</i></button>
         </div>
@@ -67,53 +68,53 @@
           <img class="rotate-img" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
-
     </div>
   </section>
 
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
+    <div class="container-fluid">
+      <div class="row ">
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-check-circle fa-4x image-features"></i>
+          <h3 class="features-title">Easy to use.</h3>
+          <p class="text-features">So easy to use, even your dog could do it.</p>
+        </div>
 
-    <div class="row">
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-bullseye fa-4x image-features"></i>
+          <h3 class="features-title">Elite Clientele</h3>
+          <p class="text-features">We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-check-circle fa-4x image-features"></i>
-        <h3 class="header-features">Easy to use.</h3>
-        <p class="text-features">So easy to use, even your dog could do it.</p>
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-heart fa-4x image-features"></i>
+          <h3 class="features-title">Guaranteed to work.</h3>
+          <p class="text-features">Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
-
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-bullseye fa-4x image-features"></i>
-        <h3>Elite Clientele</h3>
-        <p class="text-features">We have all the dogs, the greatest dogs.</p>
-      </div>
-
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-heart fa-4x image-features"></i>
-        <h3 class="header-features">Guaranteed to work.</h3>
-        <p class="text-features">Find the love of your dog's life or your money back.</p>
-      </div>
-
     </div>
+
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
 
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item container-fluid active">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -138,7 +139,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -148,81 +149,86 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
+    <div class="container-fluid">
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+      <p>Simple and affordable price plans for your and your dog.</p>
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-    <div class="row">
-      <div class=" pricing-column col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Chihuahua</h3>
-          </div>
-          <div class="card-body">
-            <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-outline-dark btn-lg btn-block" type="button">Sign Up</button>
-          </div>
-        </div>
-      </div>
-      <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Labrador</h3>
-          </div>
-          <div class="card-body">
-            <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+      <div class="row">
+
+        <div class="col-lg-4 col-md-6 pricing-column">
+          <div class="card">
+            <div class="card-header">
+              <h3>Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-outline-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="pricing-column col-lg-4">
-        <div class="card">
-          <div class="card-header">
-            <h3>Mastiff</h3>
-          </div>
-          <div class="card-body ">
-            <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+        <div class="col-lg-4 col-md-6 pricing-column">
+          <div class="card">
+            <div class="card-header">
+              <h3>Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
+        <div class="col-lg-4 pricing-column">
+          <div class="card">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+            </div>
+            <div class="card-body ">
+              <h2 class="price-text">$99 / mo</h2>
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
     </div>
+
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3 class="text-light cta-text">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-lg btn-dark btn-cta" type="button"><i class="fab fa-apple">Download</i></button>
-    <button class="btn btn-lg btn-light btn-cta" type="button"><i class="fab fa-google-play">Download</i></button>
-
+  <section class="colored-section" id="cta">
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-lg btn-dark btn-download" type="button"><i class="fab fa-apple"></i>Download</button>
+      <button class="btn btn-lg btn-light btn-download" type="button"><i
+          class="fab fa-google-play"></i>Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <div class="">
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
       <i class="fab fa-twitter footer-img"></i>
       <i class="fab fa-facebook-f footer-img"></i>
       <i class="fab fa-instagram footer-img footer-img"></i>
       <i class="fas fa-envelope footer-img"></i>
+      <p>© Copyright 2018 TinDog</p>
     </div>
-    
-    <p class="footer-text">© Copyright 2018 TinDog</p>
-
   </footer>
 
 </body>
